// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmationButton renders changes state on clicks and finally calls the onConfirmed prop 1`] = `
<div>
  <button
    class="ConfirmationButton__IconButton-sc-1h0apyh-0 dvujiG"
    data-testid="confirmation-button-initial"
  >
    <i
      class="IconContainer__I-sc-16whwc5-0 iJwbeZ sl-minus-circle"
    />
  </button>
</div>
`;

exports[`ConfirmationButton renders changes state on clicks and finally calls the onConfirmed prop 2`] = `
<div>
  <span>
    <button
      class="ConfirmationButton__IconButton-sc-1h0apyh-0 dvujiG"
      data-testid="confirmation-button-confirm"
    >
      <i
        class="IconContainer__I-sc-16whwc5-0 iJwbeZ sl-arrow-circle-right"
      />
    </button>
    <button
      class="ConfirmationButton__IconButton-sc-1h0apyh-0 dvujiG"
      data-testid="confirmation-button-cancel"
    >
      <i
        class="IconContainer__I-sc-16whwc5-0 iJwbeZ sl-delete-circle"
      />
    </button>
  </span>
</div>
`;

exports[`ConfirmationButton renders changes state on clicks and finally calls the onConfirmed prop 3`] = `
<div>
  <button
    class="ConfirmationButton__IconButton-sc-1h0apyh-0 dvujiG"
    data-testid="confirmation-button-initial"
  >
    <i
      class="IconContainer__I-sc-16whwc5-0 iJwbeZ sl-minus-circle"
    />
  </button>
</div>
`;

exports[`ConfirmationButton renders changes state on clicks and finally calls the onConfirmed prop 4`] = `
<div>
  <button
    class="ConfirmationButton__IconButton-sc-1h0apyh-0 dvujiG"
    data-testid="confirmation-button-initial"
  >
    <i
      class="IconContainer__I-sc-16whwc5-0 iJwbeZ sl-minus-circle"
    />
  </button>
</div>
`;
